# pprl-model

./: pyproject.toml
.github/workflows/: publish.yml
pprl_model/: __init__.py  mask.py  transform.py
tests/: test_base_to_full_model.py  test_custom_validation.py
