[project]
name = "pprl-model"
version = "0.1.6"
description = "Data models for use with a HTTP-based service for privacy-preserving record linkage using Bloom filters."
authors = [
    {name = "Maximilian Jugl", email = "Maximilian.Jugl@medizin.uni-leipzig.de"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic (>=2.7.0,<3.0.0)"
]
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
keywords = ["record linkage", "privacy", "bloom filter"]

[project.urls]
repository = "https://github.com/ul-mds/pprl"

[tool.poetry]
packages = [{ include = "pprl_model" }]

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
markers = [
    "integration: mark a test as an integration test."
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.9.0"
pytest = ">=8.3.0"
